--- a/backup_settings.conf
+++ b/backup_settings.conf
@@ -1,45 +1,45 @@
-#1開啟0關閉
-#是否在每次執行備份腳本使用音量鍵詢問如下備份需求
-#如果是那下面三項設置就被忽略，改為音量鍵選擇
+#1开启0关闭
+#是否在每次执行备份脚本使用音量键询问如下备份需求
+#如果是那下面三项设置就被忽略，改为音量键选择
 Lo=0
 
-#備份時檢查資料夾是否存在已經卸載應用
+#备份时检查资料夹是否存在已经卸载应用
 delete_folder=1
 
-#存在已卸載應用操作(1刪除0移動)
+#存在已卸载应用操作(1删除0移动)
 default_behavior=0
 
-#自定義備份目錄輸出位置 (忽略為空將默認腳本路徑中)
+#自定义备份目录输出位置 (忽略为空将默认脚本路径中)
 Output_path=
 
-#備份與恢復遭遇異常或是結束後發送通知(toast與狀態欄提示)
+#备份与恢复遭遇异常或是结束后发送通知(toast与状态栏提示)
 toast_info=1
 
-#自動更新腳本
+#自动更新脚本
 update=1
 
-#檢測到更新後的行為(1跳轉瀏覽器 0不跳轉瀏覽器，但是複製連結到剪裁版)
+#检测到更新后的行为(1跳转浏览器 0不跳转浏览器，但是复制连结到剪裁版)
 update_behavior=1
 
-#假設如果存在usb隨身碟是否默認使用隨身碟？(1不詢問默認使用 0每次都進行詢問)
+#假设如果存在usb随身碟是否默认使用随身碟？ (1不询问默认使用 0每次都进行询问)
 USBdefault=0
 
-#使用者(為空預設0)
+#使用者(为空预设0)
 user=
 
-#是否備份使用者數據 (1備份0不備份)
+#是否备份使用者数据 (1备份0不备份)
 Backup_user_data=1
 
-#是否備份外部數據 即比如原神的數據包(1備份0不備份)
+#是否备份外部数据 即比如原神的数据包(1备份0不备份)
 Backup_obb_data=1
 
-#是否在應用數據備份好後備份自定義目錄
+#是否在应用数据备份好后备份自定义目录
 backup_media=0
 
-#假設你遇到列表輸出異常問題請將此設為1
+#假设你遇到列表输出异常问题请将此设为1
 debug_list=0
 
-#添加自定義備份路徑 請勿刪除" "
+#添加自定义备份路径 请勿删除" "
 Custom_path="
 /storage/emulated/0/Pictures
 #/storage/emulated/0/Download
@@ -47,11 +47,11 @@ Custom_path="
 /storage/emulated/0/DCIM
 "
 
-#備份黑名單 備份apk不備份任何數據
+#备份黑名单 备份apk不备份任何数据
 blacklist="jp.naver.line.android
 com.esunbank
 com.chailease.tw.app.android.ccfappcust"
-#位於data的預裝應用白名單
+#位于data的预装应用白名单
 whitelist="com.xiaomi.xmsf
 com.xiaomi.xiaoailite
 com.xiaomi.hm.health
@@ -69,7 +69,7 @@ com.mi.health
 com.xiaomi.router
 com.xiaomi.mico
 dev.miuiicons.pedroz"
-#可被備份的系統應用白名單
+#可被备份的系统应用白名单
 system="
 com.google.android.apps.messaging
 com.google.android.inputmethod.latin
@@ -78,17 +78,17 @@ com.facebook.orca
 com.facebook.katana
 com.asus.launcher
 com.android.chrome"
-#備份完成後啟動應用
+#备份完成后启动应用
 am_start="
 com.digibites.accubattery
 com.dede.nativetools
 "
-#壓縮算法(可用lz4 zstd tar tar為僅打包 有什麼好用的壓縮算法請聯繫我
-#lz4壓縮最快，但是壓縮率略差 zstd擁有良好的壓縮率與速度 當然慢於lz4
+#压缩算法(可用lz4 zstd tar tar为仅打包 有什么好用的压缩算法请联系我
+#lz4压缩最快，但是压缩率略差 zstd拥有良好的压缩率与速度 当然慢于lz4
 Compression_method=zstd
 
 #主色
 rgb_a=190
-#輔色
+#辅色
 rgb_b=123
 rgb_c=177
