--- a/backup_settings.conf
+++ b/backup_settings.conf
@@ -3,14 +3,26 @@
 #如果是那下面三项设置就被忽略，改为音量键选择
 Lo=0
 
-#备份时检查资料夹是否存在已经卸载应用
+#备份时检查文件夹是否存在已经卸载应用
 delete_folder=1
 
 #存在已卸载应用操作(1删除0移动)
 default_behavior=0
 
-#自定义备份目录输出位置 (忽略为空将默认脚本路径中)
-Output_path=
+#ssh密码
+sshPwd='pwd'
+
+#ssh用户名
+sshUser='root'
+
+#ssh服务端ip或域名
+sshHost='192.168.223.223'
+
+#ssh服务端口号
+sshPort=22
+
+#备份目录输出远程端绝对路径
+outputPath='/bak'
 
 #备份与恢复遭遇异常或是结束后发送通知(toast与状态栏提示)
 toast_info=1
