删除攻击性描述，实现备份功能

--- a/backup_settings.conf
+++ b/backup_settings.conf
@@ -53,10 +53,10 @@ debug_list=0
 
 #添加自定义备份路径 请勿删除" "
 Custom_path="
-/storage/emulated/0/Pictures
+#/storage/emulated/0/Pictures
 #/storage/emulated/0/Download
 #/storage/emulated/0/Music
-/storage/emulated/0/DCIM
+#/storage/emulated/0/DCIM
 "
 
 #备份黑名单 备份apk不备份任何数据
